Thu Dec 25 21:58:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/extconf.rb: make PIC objects if it will be linked as
	  a shared object eventually.  [ruby-core:67128]

Thu Dec 25 19:01:13 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/fiddle/win32/libffi-3.2.1-mswin.patch: support mswin32.

Thu Dec 25 17:30:40 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* gc.c (wmap_final_func): fix memory size shortage when realloc wmap.
	  Fix SEGV during finilize of WeakRef on Solaris (though the SEGV
	  could occur on all OS/platforms). [ruby-dev:48779] [Bug #10646]

Thu Dec 25 17:27:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (NET_LUID): include winsock2.h instead of windows.h.
	  patch by Jon Forums in [ruby-core:67125].  [Bug #10640]

Thu Dec 25 16:14:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_dev): send the given arguments
	  to the opened console.  as a special case, do nothing if :close
	  is given.

	* test/lib/leakchecker.rb (LeakChecker#check_fd_leak): close if
	  console.

For the changes before 2.2.0, see doc/ChangeLog-2.2.0
For the changes before 2.1.0, see doc/ChangeLog-2.1.0
For the changes before 2.0.0, see doc/ChangeLog-2.0.0
For the changes before 1.9.3, see doc/ChangeLog-1.9.3
For the changes before 1.8.0, see doc/ChangeLog-1.8.0

Local variables:
coding: us-ascii
add-log-time-format: (lambda ()
  (let* ((time (current-time))
	 (system-time-locale "C")
	 (diff (+ (cadr time) 32400))
	 (lo (% diff 65536))
	 (hi (+ (car time) (/ diff 65536))))
  (format-time-string "%a %b %e %H:%M:%S %Y" (list hi lo) t)))
indent-tabs-mode: t
tab-width: 8
change-log-indent-text: 2
end:
vim: tabstop=8 shiftwidth=2