@@ -1,3 +1,8 @@
+Fri Dec 26 00:13:48 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_extlibs.rb: check existance of extension libraries
+	  which not depend on outer libraries. (experimental)
+
 Thu Dec 25 21:58:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/fiddle/extconf.rb: make PIC objects if it will be linked as
